--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,23 +15,18 @@
 </head>
 
 <body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.20.0/ckeditor.js"
+  <div id="root"></div>
+
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.20.0/ckeditor.js"
     integrity="sha512-BcYkQlDTKkWL0Unn6RhsIyd2TMm3CcaPf0Aw1vsV28Dj4tpodobCPiriytfnnndBmiqnbpi2EelwYHHATr04Kg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script>
-    M.Sidenav.init(document.querySelector(".sidenav"))
-  </script>
-  <script>
-    M.FormSelect.init(
-      document.querySelector("#foodCategory"))
-  </script>
 
 
   <!-- <script>CKEDITOR.replace('ingredients', { plugins: 'wysiwygarea, toolbar, basicstyles, link' })</script> -->
 
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+
 </body>
 
 </html>
