--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,6 +22,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>InEdible</title>
 </head>
 
@@ -38,6 +42,19 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.20.0/ckeditor.js"
+    integrity="sha512-BcYkQlDTKkWL0Unn6RhsIyd2TMm3CcaPf0Aw1vsV28Dj4tpodobCPiriytfnnndBmiqnbpi2EelwYHHATr04Kg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script>M.Sidenav.init(document.querySelector('.sidenav'))</script>
+  <script>M.FormSelect.init(document.querySelector('#foodCategory'))</script>
+  <!--
+                ckeditor v4 plugin docs  
+                https://ckeditor.com/docs/ckeditor4/latest/guide/dev_plugins.html 
+            -->
+  <script>CKEDITOR.replace('ingredients', {
+      plugins: 'wysiwygarea, toolbar, basicstyles, link'
+    })</script>
 </body>
 
 </html>
