--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -43,18 +43,18 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.20.0/ckeditor.js"
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.20.0/ckeditor.js"
     integrity="sha512-BcYkQlDTKkWL0Unn6RhsIyd2TMm3CcaPf0Aw1vsV28Dj4tpodobCPiriytfnnndBmiqnbpi2EelwYHHATr04Kg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
   <script>M.Sidenav.init(document.querySelector('.sidenav'))</script>
   <script>M.FormSelect.init(document.querySelector('#foodCategory'))</script>
   <!--
                 ckeditor v4 plugin docs  
                 https://ckeditor.com/docs/ckeditor4/latest/guide/dev_plugins.html 
             -->
-  <script>CKEDITOR.replace('ingredients', {
+  <!-- <script>CKEDITOR.replace('ingredients', {
       plugins: 'wysiwygarea, toolbar, basicstyles, link'
-    })</script>
+    })</script> -->
 </body>
 
 </html>
